# src/main/java/com/bonus_system/customer/controllers/v1/CustomConverter.java
@@ -1,0 +1,4 @@
+package com.bonus_system.customer.controllers.v1;
+
+public interface CustomConverter {
+}
